Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66107

[window7]Map qml : minimumZoomLevel does not block the zoomlevel at low value

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9.5, 5.11.0
    • 5.10.0
    • None
    • windows 7-64

      Qt creator 4.5.0

      Qt 5.10.0

      qmake.exe

      mingw32

       

      When setting a minimumZoomlevel to a QML map, the lower threshold is exceeded on windows 7, not on Linux.

      Here is a simple code based on the minimal map exemple.

       
      #include <QGuiApplication>
      #include <QQmlApplicationEngine>

      int main(int argc, char *argv[])
      {
      QGuiApplication app(argc, argv);

      QQmlApplicationEngine engine;
      engine.load(QUrl(QStringLiteral("qrc:/main.qml")));

      return app.exec();
      }
       

      import QtQuick 2.0
      import QtQuick.Window 2.0
      import QtLocation 5.6
      import QtPositioning 5.6
      
      Window {
          width: 1440
          height: 900
          visible: true
      
      
          Map {
              anchors.fill: parent
              plugin: Plugin {name: "osm"}
              center: QtPositioning.coordinate(59.91, 10.75) // Oslo
              zoomLevel: 10
              minimumZoomLevel: 6 //This does not block the zoomLevel
      
              onZoomLevelChanged: {
                  console.log("minimumZoomLevel : " + minimumZoomLevel + " - current zoomLevel :" + zoomLevel)
              }
          }
      }
      

       the results are (debug mode) :

      qml: minimumZoomLevel : 2.4918530963296748 - current zoomLevel :2.4918530963296748
      qml: minimumZoomLevel : 2.4918530963296748 - current zoomLevel :19
      

      So, despite having specified a minimum zoom value, it is overridden and the zoom range goes from 19 to 2.49, instead of 19 to 6.

       

      Tested on two differents computers under windows 7-64. Even reinstall all Qt to brand new 5.10.0 version.

        1. AnalyseMinimumZoomLevel.pro
          0.2 kB
        2. main.cpp
          2 kB
        3. main.qml
          3 kB
        4. 66107_minimumZoomLevel.zip
          5 kB
        For Gerrit Dashboard: QTBUG-66107
        # Subject Branch Project Status CR V

            paangele Paolo Angelelli
            kontiki kontiki
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes